Issue #SB-23575 feat: Updated app.scss for width of the overflow action menu.

--- a/src/app.scss
+++ b/src/app.scss
@@ -921,7 +921,7 @@ ion-split-pane {
     --box-shadow: 0px 3px 6px 5px #{map-get($colors, empty_color)};
     transform-origin: right top;
     transform: scale(1);
-    width: 36% !important;
+    width: 45% !important;
     .list-md {
       padding-top: 0px !important;
       padding-bottom: 0px !important;
